# graph500

./: .gitignore  BUILD.gn  Makefile
aml/: aml.c
buildtool/: gn
src/: BUILD.gn  Makefile  bfs_custom.c  bfs_reference.c  common.h  csr_reference.c  csr_reference.h  generate_graph.c  generate_graph.h  main.c  statistics.c  statistics.h
test/: BUILD.gn  graph500_construct_data_structure_test.c  graph500_generate_graph_test.c  graph500_init_test  graph500_init_test.c  graph500_run_bfs_test.c  utils.h
tools/: run_tests.sh
