# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("all") {

  deps = [
    ":graph500_init_test",
  ]
}

executable("graph500_init_test") {
  sources = [ "graph500_init_test.c" ]

  configs = []
  cflags = [ "-I../../aml", "-I../../src" ] 
  ldflags = [ "-lcmocka"]
}


