# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("all") {
  deps = [
    ":graph500_generate_graph_test",
    ":graph500_init_test",
  ]
}

CFLAGS = [
  "-Drestrict=__restrict__",
  "-O3",
  "-DGRAPH_GENERATOR_MPI",
  "-DREUSE_CSR_FOR_VALIDATION",
  "-I../aml",
  "-I../src",
]

LDFLAGS = [
  "-lcmocka",
  "-lpthread",
]

executable("graph500_init_test") {
  sources = [ "graph500_init_test.c" ]

  configs = []
  cflags = CFLAGS
  ldflags = [ "-lcmocka" ]
}

executable("graph500_generate_graph_test") {
  sources = [ "graph500_generate_graph_test.c", ]

  deps = [ "../src:generate_graph"]
  configs = []
  cflags = CFLAGS
  ldflags = LDFLAGS
  libs = [ "m" ]
}

executable("graph500_construct_data_structure_test") {
  sources = [ "graph500_construct_data_structure_test.c" ]

  deps = [
    "../src:bfs_reference",
    "../src:generate_graph",
  ]
  configs = []
  cflags = CFLAGS
  ldflags = LDFLAGS
  libs = [ "m" ]
}
